--- a/WEB_NETCORE_SACHS/appsettings.json
+++ b/WEB_NETCORE_SACHS/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BansachConect":"Data Source=ADMIN-20200518L\\SQLEXPRESS;Initial Catalog=QuanLybanSach;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BansachConect": "Data Source=NANYA-PC;Initial Catalog=QuanLybanSach;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
